--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -120,7 +120,7 @@
 
     <!-- tetherable Wifi interfaces. -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-        <item>"wlan\\d"</item>
+        <item>"wl0.1"</item>
     </string-array>
 
     <!-- tetherable bluetooth interfaces. -->
@@ -150,6 +150,12 @@
 
     <!-- Boolean indicating whether the wifi chipset has background scan support -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
+
+    <!-- Boolean indicating whether the start command should be called on the wireless interface when starting the SoftAp -->
+    <bool name="config_wifiApStartInterface">true</bool>
+    
+    <!-- Boolean indicating whether Softap requires reloading AP firmware -->
+    <bool name="config_wifiApFirmwareReload">true</bool>
 
     <!-- Is the notification LED intrusive?
          Used to decide if there should be a disable option -->
